--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Crear cuenta</title>
+    <title>Iniciar Sesión</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -13,17 +13,9 @@
 <body>
 
 <div class="card-box">
-    <h3>Crear Cuenta</h3>
+    <h3>Iniciar Sesión</h3>
 
     <form>
-               <div class="mb-3">
-            <label class="form-label">Nombre</label>
-            <div class="input-group">
-                <span class="input-group-text"><i class="fa-solid fa-user"></i></span>
-                <input type="text" class="form-control" placeholder="Nombre " required>
-            </div>
-        </div>
-
         <div class="mb-3">
             <label class="form-label">Correo electrónico</label>
             <div class="input-group">
@@ -40,19 +32,11 @@
             </div>
         </div>
 
-               <div class="mb-3">
-            <label class="form-label">confirme Contraseña</label>
-            <div class="input-group">
-                <span class="input-group-text"><i class="fa-solid fa-lock"></i></span>
-                <input type="password" class="form-control" placeholder="Repite la Contraseña" required>
-            </div>
-        </div>
-
-        <button type="submit" class="btn-main">Crear cuenta</button>
+        <button type="submit" class="btn-main">Entrar</button>
     </form>
 
     <p class="text-center mt-3">
-        ¿Ya tienes cuenta? <a href="index.html">Iniciar Sesión</a>
+        ¿No tienes cuenta? <a href="register.html">Regístrate</a>
     </p>
 </div>
 
